[project]
name = "join-vcfs"
version = "0.1.0"
description = "Join VCFs called per sample into a merged one with the alleles fixed"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"